# leadsheet

./: .gitignore  README.md  pyproject.toml
examples/: ambient-pad-reverie.leadsheet  arena-rock-anthem.leadsheet  boss-battle-anthem.leadsheet  doom-metal-dirge.leadsheet  horror-suspense-orchestral.leadsheet  lydian-jazz-pop.leadsheet  orchestral-harp-cascade.leadsheet  speedcore-gabber.leadsheet
src/leadsheet/: audio.py  capabilities.py  cli.py  compiler.py  dsl.py  limits.py  render.py  schema.py  server.py  soundfont.py  theory_check.py
src/leadsheet/skill/: SKILL.md
src/leadsheet/skill/references/: genre-recipes.md  note-string-syntax.md
tests/: test_audio.py  test_cli.py  test_compiler.py  test_dsl.py  test_examples_corpus.py  test_render.py  test_schema_validation.py  test_server_integration.py  test_theory_check.py
