[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leadsheet"
version = "0.2.0"
description = "Local MCP server + Claude Skill that lets Claude compose real music (chords, bass, melody, drums) via musicpy, without hand-writing musicpy's operator syntax."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "musicpy>=7.15,<8",
    "mcp>=1.28,<2",
    "pydantic>=2,<3",
    "httpx>=0.27",
]

[project.scripts]
leadsheet = "leadsheet.cli:main"

[project.optional-dependencies]
audio = [
    "tinysoundfont>=0.3.7,<0.4",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/leadsheet"]

[tool.hatch.build.targets.sdist]
include = [
    "src/leadsheet",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
