[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leadsheet"
version = "0.2.1"
description = "Compose simple, playable music with ChatGPT, Claude, Codex, or Gemini — without a DAW, a subscription to a music-generation service, or specialist music software. leadsheet installs a local MCP server and client Skill that turn a natural language prompt into a compact, editable .leadsheet file, then validate and render it as the best available playable audio."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "musicpy>=7.15,<8",
    "mcp>=1.28,<2",
    "pydantic>=2,<3",
    "httpx>=0.27",
]

[project.scripts]
leadsheet = "leadsheet.cli:main"

[project.optional-dependencies]
audio = [
    "tinysoundfont>=0.3.7,<0.4",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/leadsheet"]

[tool.hatch.build.targets.sdist]
include = [
    "src/leadsheet",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
